tests-integration/fixtures/checking/181_role_declaration_loosen_error/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
F ::
  forall (t4 :: Type) (f :: (t4 :: Type) -> Type) (a :: (t4 :: Type)).
    (f :: (t4 :: Type) -> Type) (a :: (t4 :: Type)) ->
    F @(t4 :: Type) (f :: (t4 :: Type) -> Type) (a :: (t4 :: Type))

Types
F :: forall (t4 :: Type). ((t4 :: Type) -> Type) -> (t4 :: Type) -> Type

Data
F
  Quantified = :1
  Kind = :0


Roles
F = [Representational, Nominal]

Diagnostics
error[InvalidRoleDeclaration]: Invalid role declaration: declared Phantom, inferred Nominal
  --> 3:1..3:21
  |
3 | data F f a = F (f a)
  | ^~~~~~~~~~~~~~~~~~~~
